Remove synchronization on releasing directByteBuffer
pr-link: Alluxio/alluxio#12580
change-id: cid-90eb8c3c9b7aeaf3f92f49edc8462b828cbcb987